[tool.poetry]
name = "gryphonbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
replit = "^2.0.0"
bluemax = "^0.2.7"
flask = "^1.1.2"
google-api-python-client = "^1.12.8"
google-auth-oauthlib = "^0.4.2"
gspread = "^3.6.0"
oauth2client = "^4.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
